--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,12 +32,9 @@ jobs:
       - run: npm i
       - run: npm run build
 
-      - name: Move build files
-        run: mv dist/* buil/
-
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./deploy
+          publish_dir: ./dist
